deactivate donkey_regensburg feed because of invalid language parameter

--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -230,12 +230,12 @@ lamassu:
       codespace: DKB
       url: "https://stables.donkey.bike/api/public/gbfs/2/donkey_kiel/gbfs.json"
       language: en
-    - systemId: donkey_regensburg
-      operatorId: DKY:Operator:donkey
-      operatorName: Donkey Republic
-      codespace: DKC
-      url: "https://stables.donkey.bike/api/public/gbfs/2/donkey_regensburg/gbfs.json"
-      language: german
+#    - systemId: donkey_regensburg
+#      operatorId: DKY:Operator:donkey
+#      operatorName: Donkey Republic
+#      codespace: DKC
+#      url: "https://stables.donkey.bike/api/public/gbfs/2/donkey_regensburg/gbfs.json"
+#      language: german
     - systemId: voi_de
       operatorId: VOI:Operator:voi
       operatorName: VOI
