centralized rabbitmq, ocpdb update (#291)
* centralized rabbitmq, ocpdb update

* prepare changelog for OCPDB and rabbitmq

* add ocpdb config

* new init mechanism

* Update to 1.2.1

Co-authored-by: Jannis R #38c3 <mail@jannisr.de>

---------

Co-authored-by: Jannis R #38c3 <mail@jannisr.de>

--- a/.env
+++ b/.env
@@ -99,15 +99,18 @@ GEOSERVER_MAXIMUM_MEMORY=4G
 # In prod, should switch to PRODUCTION_LOGGING. For other logging profiles see: https://docs.geoserver.org/stable/en/user/configuration/globalsettings.html#config-globalsettings-log-profile
 GEOSERVER_LOGGING_PROFILE=DEFAULT_LOGGING
 
+# RabbitMQ for OCPDB and ParkAPI
+RABBITMQ_VERSION=rabbitmq:3.13
+
 # ocpdb
 OCPDB_API_PORT=7000
 OCPDB_POSTGRES_USER=ocpdb
 OCPDB_POSTGRES_DB=ocpdb
 OCPDB_POSTGRES_HOST=ocpdb-db
-OCPDB_CELERY_BROKER_URL=amqp://ocpdb-rabbitmq
+OCPDB_CELERY_BROKER_URL=amqp://rabbitmq/ocpdb
 OCPDB_PRIVACY_URL=https://www.nvbw.de/datenschutz
 OCPDB_LEGAL_NOTICE_URL=https://www.nvbw.de/impressum
-OCPDB_IMAGE=ghcr.io/binary-butterfly/ocpdb:1.0.0
+OCPDB_IMAGE=ghcr.io/binary-butterfly/ocpdb:1.2.1
 OCPDB_DB_IMAGE=postgis/postgis:15-3.4-alpine
 
 # ParkAPI
@@ -115,7 +118,7 @@ PARK_API_API_PORT=7500
 PARK_API_POSTGRES_USER=park-api
 PARK_API_POSTGRES_DB=park-api
 PARK_API_POSTGRES_HOST=park-api-db
-PARK_API_CELERY_BROKER_URL=amqp://park-api-rabbitmq
+PARK_API_CELERY_BROKER_URL=amqp://rabbitmq/park-api
 PARK_API_IMAGE=ghcr.io/parkendd/park-api-v3:0.16.2
 PARK_API_DB_IMAGE=postgis/postgis:15-3.4-alpine
 
