add dott ch feeds

--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -505,6 +505,37 @@ lamassu:
       codespace: DKT
       url: "https://stables.donkey.bike/api/public/gbfs/2/donkey_yverdon-les-bains/gbfs.json"
       language: en
+    ## Dott CH
+    - systemId: dott_basel
+      operatorId: DOT:Operator:dott
+      operatorName: Dott
+      codespace: DOP
+      url: "https://gbfs.api.ridedott.com/public/v2/basel/gbfs.json"
+      language: en
+    - systemId: dott_bregenz
+      operatorId: DOT:Operator:dott
+      operatorName: Dott
+      codespace: DOQ
+      url: "https://gbfs.api.ridedott.com/public/v2/bregenz/gbfs.json"
+      language: en
+    - systemId: dott_st_gallen
+      operatorId: DOT:Operator:dott
+      operatorName: Dott
+      codespace: DOR
+      url: "https://gbfs.api.ridedott.com/public/v2/st.-gallen/gbfs.json"
+      language: en
+    - systemId: dott_winterthur
+      operatorId: DOT:Operator:dott
+      operatorName: Dott
+      codespace: DOS
+      url: "https://gbfs.api.ridedott.com/public/v2/winterthur/gbfs.json"
+      language: en
+    - systemId: dott_zurich
+      operatorId: DOT:Operator:dott
+      operatorName: Dott
+      codespace: DOT
+      url: "https://gbfs.api.ridedott.com/public/v2/zurich/gbfs.json"
+      language: en
     # Lime CH
     - systemId: lime_basel
       operatorId: LME:Operator:lime
