--- a/.env.local.example
+++ b/.env.local.example
@@ -35,6 +35,7 @@ FLINKSTER_CLIENT_ID=client_id
 FLINKSTER_SECRET=secret
 
 # Credentials for Free2move
+X2GBFS_FREE2MOVE_BASE_URL=url
 X2GBFS_FREE2MOVE_USER=user
 X2GBFS_FREE2MOVE_PASSWORD=secret
 
