fix: geoserver: hard-code linux/amd64 platform
This fixes running (with default settings) on arm64 platforms.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -283,6 +283,8 @@ services:
   geoserver:
     networks: [ipl]
     image: ${GEOSERVER_IMAGE}
+    # Currently, there's no linux/arm64 image.
+    platform: linux/amd64
     user: *local-user
     volumes:
       # var/geoserver defaults to geoserver/data_dir, custom config shall explicitly be defined in etc/geoserver
