chore: bump lamassu, ipl-dagster-pipeline

--- a/.env.local.example
+++ b/.env.local.example
@@ -39,6 +39,10 @@ X2GBFS_FREE2MOVE_BASE_URL=url
 X2GBFS_FREE2MOVE_USER=user
 X2GBFS_FREE2MOVE_PASSWORD=secret
 
+# Custom base url under which (basic auth secured) feeds 
+# are published directly, not served via lamassu
+X2GBFS_CUSTOM_BASE_URL=url
+
 # Url to the cantamen IXSI service. Note: this service is IP restricted
 CANTAMEN_IXSI_API_URL=http://example.org
 #Timeout for cantamen IXSI websocket connection in seconds
