fix: re-enable graphiql and document changes

--- a/etc/lamassu/application.properties
+++ b/etc/lamassu/application.properties
@@ -18,12 +18,12 @@ org.entur.lamassu.redis.slave.enabled=false
 #org.entur.lamassu.redis.slave.host=
 #org.entur.lamassu.redis.slave.port=
 
-# graphql starter
-graphql.graphiql.enabled=true
-graphql.graphiql.pageTitle=MobiData BW: Sharing API GraphiQL
-graphql.graphiql.basePath: /sharing/
-graphql.graphiql.endpoint.graphql: /sharing/graphql
-graphql.graphiql.endpoint.subscriptions: /sharing/subscriptions
+# graphiql config. 
+# To open, path param needs to be supplied. Otherwise a redirect
+# happens which uses hard coded, wrong paths...
+# https://<host:port>/sharing/graphiql?path=/sharing/graphql
+spring.graphql.graphiql.enabled=true
+
 graphql.servlet.actuator-metrics=true
 graphql.servlet.corsEnabled=false
 
