reactivate voi credentials. remove tier credentials

--- a/.env.local.example
+++ b/.env.local.example
@@ -13,11 +13,11 @@ LAMASSU_DB_CONNECT_API_KEY=secret
 LAMASSU_BOLT_CLIENT_ID=client
 LAMASSU_BOLT_CLIENT_PASSWORD=secret
 
-# Credentials for Tier
-LAMASSU_TIER_API_URL=http://example.org
-LAMASSU_TIER_USER=user
-LAMASSU_TIER_PASSWORD=secret
-
+# Credentials for Voi
+LAMASSU_VOI_AUTH_URL=http://example.org
+LAMASSU_VOI_CLIENT_ID=user
+LAMASSU_VOI_CLIENT_PASSWORD=secret
+ 
 # Credentials for sharedmobility.ch
 LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION=mail@domain
 
