reactivate voi credentials. remove tier credentials

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -207,9 +207,9 @@ services:
       LAMASSU_BOLT_AUTH_URL: ${LAMASSU_BOLT_AUTH_URL:?missing/empty}
       LAMASSU_BOLT_CLIENT_ID: ${LAMASSU_BOLT_CLIENT_ID:?missing/empty}
       LAMASSU_BOLT_CLIENT_PASSWORD: ${LAMASSU_BOLT_CLIENT_PASSWORD:?missing/empty}
-      LAMASSU_TIER_API_URL: ${LAMASSU_TIER_API_URL:?missing/empty}
-      LAMASSU_TIER_USER: ${LAMASSU_TIER_USER:?missing/empty}
-      LAMASSU_TIER_PASSWORD: ${LAMASSU_TIER_PASSWORD:?missing/empty}
+      LAMASSU_VOI_AUTH_URL: ${LAMASSU_VOI_AUTH_URL:?missing/empty}
+      LAMASSU_VOI_CLIENT_ID: ${LAMASSU_VOI_CLIENT_ID:?missing/empty}
+      LAMASSU_VOI_CLIENT_PASSWORD: ${LAMASSU_VOI_CLIENT_PASSWORD:?missing/empty}
       LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION: ${LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION:?missing/empty}
       LAMASSU_BASE_URL: ${LAMASSU_BASE_URL}
       LAMASSU_FEED_UPATE_INTERVAL_IN_MS: ${LAMASSU_FEED_UPATE_INTERVAL_IN_MS:?missing/empty}
