--- a/etc/lamassu/application.properties
+++ b/etc/lamassu/application.properties
@@ -77,4 +77,4 @@ org.entur.lamassu.serializationVersion=1
 org.entur.lamassu.enableValidation=true
 
 ## Control filtering of virtual stations
-org.entur.lamassu.excludeVirtualStations=false
+org.entur.lamassu.vehicle-filter.include-vehicles-assigned-to-non-virtual-stations=true
