fix: ingress: allow CORS requests with Content-Type header (e.g. GraphQL)
Since the Lamassu upgrade in f5cec8c, GraphQL requests must be sent to it using `POST` [0], but until now, the Traefik CORS handling didn't send preflight responses that allow requests with a `Content-Type` header.

[0] https://github.com/entur/lamassu/blob/2025-03-19T09-09/Changelog.md?plain=1#L11

fixes https://github.com/mobidata-bw/ipl-orchestration/issues/358

--- a/etc/traefik/allow-cors-including-post.yml
+++ b/etc/traefik/allow-cors-including-post.yml
@@ -11,3 +11,7 @@ http:
           - OPTIONS
           - HEAD
         accesscontrolalloworiginlist: "*"
+        accesscontrolallowheaders:
+          - "Content-Type"
+        accesscontrolexposeheaders:
+          - "Content-Type"
