--- a/etc/traefik/allow-cors-including-post.yml
+++ b/etc/traefik/allow-cors-including-post.yml
@@ -13,5 +13,7 @@ http:
         accesscontrolalloworiginlist: "*"
         accesscontrolallowheaders:
           - "Content-Type"
+          - "User-Agent"
         accesscontrolexposeheaders:
           - "Content-Type"
+          - "User-Agent"
