chore: ingress: let clients cache CORS preflight results for 1 hour
This improves query latency & throughput because clients (e.g. browsers) won't have to do a preflight request every 5 seconds (default duration).

--- a/etc/traefik/allow-cors-including-post.yml
+++ b/etc/traefik/allow-cors-including-post.yml
@@ -17,3 +17,5 @@ http:
         accesscontrolexposeheaders:
           - "Content-Type"
           - "User-Agent"
+        # allow clients to cache results of preflight requests for 1 hour
+        accesscontrolmaxage: "3600"
