--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -505,24 +505,24 @@ lamassu:
       # Note: donkey feeds is temporarilly accessed via proxy, using http instead of https
       url: "http://stables.donkey.bike/api/public/gbfs/2/donkey_kreuzlingen/gbfs.json"
       language: en
-    - systemId: donkey_le_locle
-      operatorId: DKY:Operator:donkey
-      operatorName: Donkey Republic
-      codespace: DKP
-      url: "https://stables.donkey.bike/api/public/gbfs/2/donkey_le_locle/gbfs.json"
-      language: en
+#    - systemId: donkey_le_locle
+#      operatorId: DKY:Operator:donkey
+#      operatorName: Donkey Republic
+#      codespace: DKP
+#      url: "https://stables.donkey.bike/api/public/gbfs/2/donkey_le_locle/gbfs.json"
+#      language: en
     - systemId: donkey_neuchatel
       operatorId: DKY:Operator:donkey
       operatorName: Donkey Republic
       codespace: DKQ
       url: "https://stables.donkey.bike/api/public/gbfs/2/donkey_neuchatel/gbfs.json"
       language: en
-    - systemId: donkey_sion
-      operatorId: DKY:Operator:donkey
-      operatorName: Donkey Republic
-      codespace: DKR
-      url: "https://stables.donkey.bike/api/public/gbfs/2/donkey_sion/gbfs.json"
-      language: en
+#    - systemId: donkey_sion
+#      operatorId: DKY:Operator:donkey
+#      operatorName: Donkey Republic
+#      codespace: DKR
+#      url: "https://stables.donkey.bike/api/public/gbfs/2/donkey_sion/gbfs.json"
+#      language: en
     - systemId: donkey_thun
       operatorId: DKY:Operator:donkey
       operatorName: Donkey Republic
