--- a/.env
+++ b/.env
@@ -55,6 +55,9 @@ IPL_GTFS_DB_POSTGRES_DB_PREFIX=gtfs
 # gtfs-importer variables
 IPL_GTFS_IMPORTER_IMAGE=ghcr.io/mobidata-bw/postgis-gtfs-importer:v5-2025-02-28T14.45.19-2a4e7d2
 IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_URL=https://www.nvbw.de/fileadmin/user_upload/service/open_data/fahrplandaten_mit_liniennetz/bwgesamt.zip
+# To make the GTFS import work within NVBW's IT infrastructure, we must manually resolve the GTFS server's domain.
+# Here however, in the default configuration, we set a harmless entry (an RFC 6761 special-use domain) that shouldn't interfere with the IPL operation.
+IPL_GTFS_IMPORTER_EXTRA_HOST="random.alt=127.0.0.1"
 IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_USER_AGENT="IPL (MobiData-BW)"
 # This assumes, that the ipl platform is started in a directory `ipl` which's name becomes
 # the docker project name and is prefixed to the `ipl` network defined in docker-compose.
